--- a/InventorySystemForiPhone/ViewController/SaleOrder/View/OrderMain/ISOrderTableViewCell.xib
+++ b/InventorySystemForiPhone/ViewController/SaleOrder/View/OrderMain/ISOrderTableViewCell.xib
@@ -99,8 +99,17 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="USc-mP-FzX">
+                        <rect key="frame" x="282" y="5" width="38" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="3wJ-9A-IZX"/>
+                            <constraint firstAttribute="width" constant="38" id="C9g-Yo-hAA"/>
+                        </constraints>
+                        <state key="normal" image="order_list_delete"/>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="USc-mP-FzX" firstAttribute="centerY" secondItem="5KE-Ua-JgV" secondAttribute="centerY" id="0Kx-e0-0YO"/>
                     <constraint firstItem="FI5-rd-kLl" firstAttribute="centerY" secondItem="vgy-UF-v7y" secondAttribute="centerY" id="0kY-jj-Ehx"/>
                     <constraint firstItem="vz3-a2-i2B" firstAttribute="centerY" secondItem="x57-wM-bBE" secondAttribute="centerY" id="1GL-qm-Wru"/>
                     <constraint firstItem="Krv-L7-bc5" firstAttribute="top" secondItem="Skw-0Y-hVq" secondAttribute="bottom" constant="3.5" id="55K-1C-b2N"/>
@@ -113,6 +122,7 @@
                     <constraint firstItem="Skw-0Y-hVq" firstAttribute="top" secondItem="5KE-Ua-JgV" secondAttribute="bottom" constant="3.5" id="UgH-nd-C0c"/>
                     <constraint firstItem="x57-wM-bBE" firstAttribute="top" secondItem="Krv-L7-bc5" secondAttribute="bottom" constant="7" id="WBK-JK-UGt"/>
                     <constraint firstItem="vgy-UF-v7y" firstAttribute="leading" secondItem="FI5-rd-kLl" secondAttribute="trailing" constant="8.5" id="WJL-Dn-h1X"/>
+                    <constraint firstAttribute="trailing" secondItem="USc-mP-FzX" secondAttribute="trailing" id="XUu-Pv-249"/>
                     <constraint firstItem="5KE-Ua-JgV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="dtS-ET-PYS"/>
                     <constraint firstItem="rZd-jl-g8V" firstAttribute="centerY" secondItem="5KE-Ua-JgV" secondAttribute="centerY" id="euq-tb-2qE"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="rZd-jl-g8V" secondAttribute="trailing" constant="10" id="ie4-Rb-eg1"/>
@@ -140,6 +150,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="order_list_delete" width="12" height="15"/>
         <image name="order_list_line" width="22" height="4"/>
     </resources>
 </document>
