--- a/InventorySystemForiPhone/ViewController/QueryOrder/View/ISQueryOrderCell.xib
+++ b/InventorySystemForiPhone/ViewController/QueryOrder/View/ISQueryOrderCell.xib
@@ -1,20 +1,114 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Lantinghei_0.ttf">
+            <string>FZLTXHK--GBK1-0</string>
+            <string>FZLTXHK--GBK1-0</string>
+            <string>FZLTXHK--GBK1-0</string>
+            <string>FZLTXHK--GBK1-0</string>
+        </mutableArray>
+        <mutableArray key="Lantinghei_1.ttf">
+            <string>FZLTHJW--GB1-0</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="86" id="KGk-i7-Jjw" customClass="ISQueryOrderCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="86"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="KGk-i7-Jjw" customClass="ISQueryOrderCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="85.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="S2015101012010" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JIY-N8-b4M">
+                        <rect key="frame" x="12" y="10" width="112.5" height="19.5"/>
+                        <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="Lantinghei SC" pointSize="14"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="客户:fdsfdsfdsfds" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3de-HM-IBE">
+                        <rect key="frame" x="12" y="43" width="114" height="19.5"/>
+                        <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="Lantinghei SC" pointSize="14"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="客户:fdsfdsfdsfds" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kXq-8q-jGE">
+                        <rect key="frame" x="12" y="65" width="106" height="18.5"/>
+                        <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="Lantinghei SC" pointSize="13"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="客户:fdsfdsfdsfds" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OL8-hZ-iV8">
+                        <rect key="frame" x="151" y="43" width="114" height="19.5"/>
+                        <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="Lantinghei SC" pointSize="14"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未上传" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bR-cs-xfX">
+                        <rect key="frame" x="135" y="13" width="30" height="13"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="13" id="PvG-4I-VnZ"/>
+                            <constraint firstAttribute="width" constant="30" id="u31-nL-uVW"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="9"/>
+                        <color key="textColor" red="0.50196078430000002" green="0.69019607839999997" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="order_list_line" translatesAutoresizingMaskIntoConstraints="NO" id="rie-1j-RPm">
+                        <rect key="frame" x="12" y="33" width="308" height="4"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="4" id="7Yb-rh-tNF"/>
+                        </constraints>
+                    </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oPv-wa-sdQ">
+                        <rect key="frame" x="282" y="8" width="38" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="38" id="4mj-Ch-HYa"/>
+                            <constraint firstAttribute="height" constant="22" id="VTt-t4-cgd"/>
+                        </constraints>
+                        <state key="normal" image="order_list_delete"/>
+                        <connections>
+                            <action selector="deleteItem:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Va2-p6-mTc"/>
+                        </connections>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="OL8-hZ-iV8" firstAttribute="leading" secondItem="3de-HM-IBE" secondAttribute="trailing" constant="25" id="4jV-LK-Wxq"/>
+                    <constraint firstAttribute="trailing" secondItem="rie-1j-RPm" secondAttribute="trailing" id="5Ws-dv-gvb"/>
+                    <constraint firstItem="OL8-hZ-iV8" firstAttribute="centerY" secondItem="3de-HM-IBE" secondAttribute="centerY" id="603-qJ-gp3"/>
+                    <constraint firstItem="JIY-N8-b4M" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="7wq-UM-nPE"/>
+                    <constraint firstItem="3de-HM-IBE" firstAttribute="leading" secondItem="JIY-N8-b4M" secondAttribute="leading" id="Cpw-rh-7Iq"/>
+                    <constraint firstItem="kXq-8q-jGE" firstAttribute="top" secondItem="3de-HM-IBE" secondAttribute="bottom" constant="2.5" id="M8C-MK-O2B"/>
+                    <constraint firstAttribute="trailing" secondItem="oPv-wa-sdQ" secondAttribute="trailing" id="NBY-TH-xAZ"/>
+                    <constraint firstItem="3de-HM-IBE" firstAttribute="top" secondItem="rie-1j-RPm" secondAttribute="bottom" constant="6" id="O8m-S4-Jfi"/>
+                    <constraint firstItem="kXq-8q-jGE" firstAttribute="leading" secondItem="3de-HM-IBE" secondAttribute="leading" id="PXr-Lz-ywQ"/>
+                    <constraint firstAttribute="bottom" secondItem="kXq-8q-jGE" secondAttribute="bottom" constant="6" id="Ths-pY-Mbd"/>
+                    <constraint firstItem="8bR-cs-xfX" firstAttribute="centerY" secondItem="JIY-N8-b4M" secondAttribute="centerY" id="Vdg-er-ImW"/>
+                    <constraint firstItem="8bR-cs-xfX" firstAttribute="leading" secondItem="JIY-N8-b4M" secondAttribute="trailing" constant="10.5" id="iJI-U4-ckn"/>
+                    <constraint firstItem="oPv-wa-sdQ" firstAttribute="centerY" secondItem="JIY-N8-b4M" secondAttribute="centerY" id="kh7-qa-mxh"/>
+                    <constraint firstItem="rie-1j-RPm" firstAttribute="top" secondItem="JIY-N8-b4M" secondAttribute="bottom" constant="3.5" id="oEg-cu-9X7"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kXq-8q-jGE" secondAttribute="trailing" constant="10" id="qzP-Jm-UgW"/>
+                    <constraint firstItem="rie-1j-RPm" firstAttribute="leading" secondItem="JIY-N8-b4M" secondAttribute="leading" id="wNM-lA-OaY"/>
+                    <constraint firstItem="JIY-N8-b4M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="xGh-nQ-bxh"/>
+                </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="448" y="296"/>
+            <connections>
+                <outlet property="customerLabel" destination="3de-HM-IBE" id="igj-n5-Zxp"/>
+                <outlet property="orderNoLabel" destination="JIY-N8-b4M" id="oTC-Ti-Zrk"/>
+                <outlet property="remarkLabel" destination="kXq-8q-jGE" id="w6z-i0-Ucz"/>
+                <outlet property="statusLabel" destination="8bR-cs-xfX" id="8DV-S5-Y9t"/>
+                <outlet property="totalLabel" destination="OL8-hZ-iV8" id="bgw-Uf-fFz"/>
+            </connections>
+            <point key="canvasLocation" x="321" y="171"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="order_list_delete" width="12" height="15"/>
+        <image name="order_list_line" width="22" height="4"/>
+    </resources>
 </document>
